<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attrs="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Solitude"
    tools:context=".fragments.HomeFragment">

    <ProgressBar
        android:id="@+id/pb_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nsv"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_banner"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_230dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_banner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <androidx.viewpager.widget.ViewPager
                                android:id="@+id/pager_banner"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"

                                />

                            <com.rd.PageIndicatorView
                                android:id="@+id/pageIndicatorView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="@dimen/_16dp"
                                app:piv_animationType="scale"
                                app:piv_dynamicCount="true"
                                app:piv_interactiveAnimation="true"
                                app:piv_selectedColor="@color/white"
                                app:piv_unselectedColor="@color/black"
                                app:piv_viewPager="@id/pager_banner"
                                attrs:layout_constraintBottom_toBottomOf="parent"
                                attrs:layout_constraintEnd_toEndOf="parent"
                                attrs:layout_constraintStart_toStartOf="parent"
                                attrs:piv_padding="@dimen/_12dp"
                                attrs:piv_radius="@dimen/_6dp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/_40dp"
                                android:background="#72202020"
                                app:layout_constraintBottom_toBottomOf="parent" />


                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/txt_show"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/_10dp"
                                android:text="@string/Wallpapers"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_latest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cl_banner">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_6dp"
                        android:layout_weight="1"
                        android:gravity="start|center">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_latest"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_4dp"
                            android:text="@string/latest"
                            android:textSize="@dimen/_25sp"
                            android:textStyle="bold"

                            />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end|center">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/more_latest"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_30dp"
                            android:layout_margin="@dimen/_4dp"
                            android:background="@drawable/bac_set"
                            android:text="@string/more"
                            android:textColor="@color/white"

                            />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_latest"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_320dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:background="@color/Solitude"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_latest"

                    />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ll_featuredWallpaper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rv_latest">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_6dp"
                        android:layout_weight="1"
                        android:gravity="start|center">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txt_featured"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_4dp"
                            android:text="@string/featured"
                            android:textSize="@dimen/_25sp"
                            android:textStyle="bold"

                            />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="end|center">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/more_featured"
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/_30dp"
                            android:layout_margin="@dimen/_4dp"
                            android:background="@drawable/bac_set"
                            android:text="@string/more"
                            android:textColor="@color/white"

                            />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_featured"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="@dimen/_320dp"
                    android:background="@color/Solitude"
                    android:layout_marginTop="@dimen/_8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ll_featuredWallpaper"

                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_no_connection"
        android:layout_width="@dimen/_0dp"
        android:layout_height="@dimen/_0dp"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/pic_no_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_150dp"
            android:src="@drawable/no_connection"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_en"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50dp"
            android:text="@string/no_internet_connection"
            android:textColor="@color/BlueWhale"
            android:textSize="@dimen/_17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pic_no_connection"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_try"
            android:layout_width="@dimen/_180dp"
            android:layout_height="@dimen/_70dp"
            android:background="@drawable/btn_try_shape"
            android:lineSpacingExtra="@dimen/_5dp"
            android:text="@string/try_again"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_en"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>